--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -10,10 +10,7 @@ slint = "1.0"
 portable-pty = "0.8.1"
 strip-ansi-escapes = "0.2.0"
 once_cell = "1.18.0"
-native-dialog = { version = "0.6.4", features = [
-    "windows_dpi_awareness",
-    "windows_visual_styles",
-] }
+native-dialog = "0.6.4"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.51", features = [
@@ -26,3 +23,4 @@ check_elevation = "0.2"
 
 [build-dependencies]
 slint-build = "1.0"
+embed-resource = "2.3"
