--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -21,6 +21,7 @@ tempfile = "3.8.0"
 sxd-document = "0.3.2"
 sxd-xpath = "0.4.2"
 regex = "1.10.2"
+once_cell = "1.18.0"
 rhai = { version = "1", features = ["serde"] }
 
 [target.'cfg(windows)'.dependencies]
