--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,6 +23,7 @@ sxd-xpath = "0.4.2"
 regex = "1.10.2"
 once_cell = "1.18.0"
 rhai = { version = "1", features = ["serde"] }
+semver = "1.0"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.51.0"
