feat: config vscode status bar to fit general custom

--- a/cli/resources/templates/gcc/.vscode/settings.json
+++ b/cli/resources/templates/gcc/.vscode/settings.json
@@ -5,5 +5,22 @@
     "files.associations": {
         "Drivers/**.c": "c",
         "Drivers/**.h": "c"
+    },
+    "cmake.options.advanced": {
+        "build": {
+            "statusBarVisibility": "visible"
+        },
+        "configurePreset": {
+            "statusBarVisibility": "visible"
+        },
+        "buildPreset": {
+            "statusBarVisibility": "visible"
+        },
+        "launch": {
+            "statusBarVisibility": "hidden"
+        },
+        "debug": {
+            "statusBarVisibility": "hidden"
+        }
     }
 }
