feat: show debug in vscode status bar always

--- a/cli/resources/templates/gcc/.vscode/settings.json
+++ b/cli/resources/templates/gcc/.vscode/settings.json
@@ -22,5 +22,6 @@
         "debug": {
             "statusBarVisibility": "hidden"
         }
-    }
+    },
+    "debug.showInStatusBar": "always"
 }
