--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,3 +44,23 @@ jobs:
       with:
         files: |
           win32_installer/*.exe
+
+  deploy-linux:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v3
+    - name: Install Packaging Tools
+      run: cargo install cargo-deb
+    - name: Build (Release)
+      run: cargo build --release --verbose
+    - name: Package (Debian)
+      run: | 
+        cargo deb -p stm32tesseract --no-build --verbose
+        cargo deb -p stm32tesseract-gui --no-build --verbose
+    - name: Release (GitHub)
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          target/debian/stm32tesseract_*.deb
+          target/debian/stm32tesseract-gui_*.deb
