--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -13,6 +13,8 @@ portable-pty = "0.8.1"
 strip-ansi-escapes = "0.2.0"
 once_cell = "1.18.0"
 native-dialog = "0.7"
+which = "6.0"
+libc = "0.2"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.51", features = [
