--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -12,7 +12,10 @@ slint = "1.0"
 portable-pty = "0.8.1"
 strip-ansi-escapes = "0.2.0"
 once_cell = "1.18.0"
-native-dialog = "0.7"
+rfd = { version = "0.14", default-features = false, features = [
+    "async-std",
+    "xdg-portal",
+] }
 which = "6.0"
 libc = "0.2"
 
