--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,8 +9,9 @@ license = "BSD-3-Clause"
 clap = { version = "4.4.6", features = ["derive"] }
 which = "6.0.0"
 thiserror = "1.0"
-reqwest = { version = "0.11.22", default-features = false, features = [
+reqwest = { version = "0.12", default-features = false, features = [
     "blocking",
+    "http2",
     "json",
     "rustls-tls-native-roots",
 ] }
