--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -8,15 +8,21 @@ license = "BSD-3-Clause"
 
 [dependencies]
 clap = { version = "4.4.6", features = ["derive"] }
-slint = "1.0"
+slint = { version = "1.8", default-features = false, features = [
+    "compat-1-2",
+    "accessibility",
+    "std",
+    "backend-default",
+    "renderer-skia",
+] }
 portable-pty = "0.8.1"
 strip-ansi-escapes = "0.2.0"
 once_cell = "1.18.0"
-rfd = { version = "0.14", default-features = false, features = [
+rfd = { version = "0.15", default-features = false, features = [
     "async-std",
     "xdg-portal",
 ] }
-which = "6.0"
+which = "7.0"
 libc = "0.2"
 
 [target.'cfg(windows)'.dependencies]
