--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
 license = "BSD-3-Clause"
 
 [dependencies]
+base64 = "0.22"
 clap = { version = "4.4.6", features = ["derive"] }
 which = "6.0.0"
 thiserror = "1.0"
@@ -15,10 +16,14 @@ reqwest = { version = "0.12", default-features = false, features = [
     "json",
     "rustls-tls-native-roots",
 ] }
+scopeguard = "1.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+sha2 = "0.10"
 zip = "2"
 tar = "0.4"
+tokio = "1"
+trauma = "2"
 flate2 = "1"
 tempfile = "3"
 sxd-document = "0.3.2"
@@ -27,6 +32,7 @@ regex = "1.11"
 once_cell = "1.20"
 rhai = { version = "1", features = ["serde"] }
 semver = "1.0"
+url = "2"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.51.0"
