--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,24 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  deploy-win:
-    if: startsWith(github.ref, 'refs/tags/')
-    runs-on: windows-latest
+  generate-release-notes:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: latest
+      - run: npx changelogithub ${{ github.event_name == 'push' && github.ref_type == 'tag' && '--draft' || '--dry'}}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
+  deploy-win:
+    if: github.event_name == 'push' && github.ref_type == 'tag'
+    runs-on: windows-latest
+    needs: 
+      - generate-release-notes
     steps:
     - uses: actions/checkout@v3
     - name: Install NSIS
@@ -40,14 +54,18 @@ jobs:
         $installer_name = "stm32tesseract-" + $env:GITHUB_REF.replace('refs/tags/', '') + "-installer.exe"
         Rename-Item -Path ./STM32TesseractInstaller.exe -NewName $installer_name
     - name: Release (GitHub)
-      uses: softprops/action-gh-release@v1
+      uses: ncipollo/release-action@v1
       with:
-        files: |
-          win32_installer/*.exe
+        allowUpdates: true
+        draft: true
+        omitBody: true
+        artifacts: "win32_installer/*.exe"
 
   deploy-linux:
-    if: startsWith(github.ref, 'refs/tags/')
+    if: github.event_name == 'push' && github.ref_type == 'tag'
     runs-on: ubuntu-20.04
+    needs: 
+      - generate-release-notes
     steps:
     - uses: actions/checkout@v3
     - name: Install Packaging Tools
@@ -59,8 +77,23 @@ jobs:
         cargo deb -p stm32tesseract --no-build --verbose
         cargo deb -p stm32tesseract-gui --no-build --verbose
     - name: Release (GitHub)
-      uses: softprops/action-gh-release@v1
+      uses: ncipollo/release-action@v1
       with:
-        files: |
-          target/debian/stm32tesseract_*.deb
-          target/debian/stm32tesseract-gui_*.deb
+        allowUpdates: true
+        draft: true
+        omitBody: true
+        artifacts: "target/debian/*.deb"
+
+  publish-release:
+    if: github.event_name == 'push' && github.ref_type == 'tag'
+    runs-on: ubuntu-latest
+    needs:
+    - deploy-win
+    - deploy-linux
+    steps:
+      - name: Release (GitHub)
+        uses: ncipollo/release-action@v1
+        with:
+          allowUpdates: true
+          draft: false
+          omitBody: true
