--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -19,6 +19,7 @@ reqwest = { version = "0.12", default-features = false, features = [
 scopeguard = "1.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+sha1 = "0.10"
 sha2 = "0.10"
 zip = "2"
 tar = "0.4"
