--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -22,6 +22,7 @@ rfd = { version = "0.15", default-features = false, features = [
     "async-std",
     "xdg-portal",
 ] }
+vte = "0.15"
 which = "7.0"
 libc = "0.2"
 
